# polyviper

./: ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  market_config.rs  market_finder.rs  market_watcher.rs  polymarket_api.rs
src/core/: bus.rs  mod.rs  models.rs
src/feeders/: binance.rs  deribit.rs  mod.rs  polymarket.rs
src/oms/: bootstrapper.rs  handler.rs  mod.rs  risk.rs
src/strategies/: cex_arb.rs  edge_strategy.rs  latency_arb.rs  mod.rs
