[package]
name = "polyviper"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-signer-local = "1.8.3"
anyhow = "1.0.102"
dotenv = "0.15.0"
futures = "0.3"
polymarket-client-sdk = { version = "0.4.4", features = ["clob", "ws"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
