[package]
name = "polyviper"
version = "0.2.0"
edition = "2021"

[dependencies]
alloy-signer-local = "1.8.3"
anyhow = "1.0.102"
dotenv = "0.15.0"
futures = "0.3"
polymarket-client-sdk = { version = "0.4.4", features = ["clob", "ws"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
url = "2.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
k256 = "0.13.4"
futures-util = "0.3.32"
uuid = { version = "1.23.0", features = ["v4"] }
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
